--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -6,6 +6,10 @@
 @import "layout/underHeader";
 @import "layout/main";
 @import "layout/footer";
+@import "layout/masonry";
 
+@import "component/forms";
+@import "component/buttons";
 @import "component/slideoutMenu";
 @import "component/gdprCookieManager";
+@import "component/blog";
