--- a/assets/src/sass/component/_slideoutMenu.scss
+++ b/assets/src/sass/component/_slideoutMenu.scss
@@ -41,16 +41,10 @@ nav {
           transition: border-bottom-color 0.5s;
           padding-bottom: 2px;
           border-bottom: 2px solid transparent; // For color transition
-          &:visited {
-            color: inherit;
-          }
-          &:hover, &:focus {
-            border-bottom: 2px solid $bg-brand-primary;
-          }
         }
         &.active {
           a {
-            border-bottom: 2px solid $bg-brand-primary;
+            border-bottom: 2px solid lighten($bg-brand-primary, 20%);
           }
         }
       }
