--- a/layouts/2-col-right.htm
+++ b/layouts/2-col-right.htm
@@ -1,4 +1,4 @@
-description = "Single column layout"
+description = "2 Column Right Sidebar"
 
 [cookieBanner]
 include_css = 1
@@ -18,6 +18,10 @@ code = "mobile-nav"
 
 [ContactForm]
 formId = 1
+==
+
+
+
 ==
 <!DOCTYPE html>
 
@@ -42,8 +46,12 @@ formId = 1
     <div class="container-full main-container">
         <main class="container">
             <div class="grid">
-                <div class="col-12">
+                <div class="col-12 col-md-9">
                     {% page %}
+                </div>
+
+                <div class="col-12 col-md-3">
+                    {% partial 'layout/2-column/sidebar' %}
                 </div>
             </div>
         </main>
