--- a/partials/layout/default/head.htm
+++ b/partials/layout/default/head.htm
@@ -1,6 +1,11 @@
 <meta charset="utf-8">
 <title>{{ this.page.title }}</title>
+
+{# Load very common libraries from their CDN as quite likely cached #}
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+<link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" rel="stylesheet" crossorigin="anonymous">
+{# End CDN loaded assets #}
+
 <link href="{{ 'assets/dist/css/vendor.css'|theme }}" rel="stylesheet">
 <link href="{{ 'assets/dist/css/app.css'|theme }}" rel="stylesheet">
 {% styles %}
