--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -13,3 +13,4 @@
 @import "component/slideoutMenu";
 @import "component/gdprCookieManager";
 @import "component/blog";
+@import "component/iziModal";
