--- a/partials/layout/default/footer.htm
+++ b/partials/layout/default/footer.htm
@@ -1,7 +1,13 @@
 <footer class="container">
     <div class="grid align-center">
         <div class="col-12">
-            This is the footer
+            <p>This is the footer</p>
+            <p>This is the footer</p>
+            <p>This is the footer</p>
         </div>
+
     </div>
+    <p class="by-line">
+        Website by <a href="http://dynamedia.uk">Dynamedia</a>
+    </p>
 </footer>
