--- a/partials/layout/default/header.htm
+++ b/partials/layout/default/header.htm
@@ -1,13 +1,13 @@
 <header class="container">
     <div class="grid">
-        <div class="col-3 align-self-center">
-            <a href="/"><img class="logo" src="{{'assets/dist/images/logo.png'|theme}}" alt="Site Logo"></a>
+        <div class="brand-space col-8 col-xs-6 col-sm-5 col-md-3 align-self-center">
+            <a class="logo" href="/"><img class="logo" src="{{'assets/dist/images/logo.png'|theme}}" alt="Site Logo"></a>
         </div>
-        <div class="col-9 align-self-center">
+        <div class="col-4 col-xs-6 col-sm-7 col-md-9 align-self-center">
             <div class="grid">
                 <div class="col-12">
                     <div class="grid">
-                        <nav class="col-12 hidden-xxs hidden-xs hidden-sm" id="main-upper-nav">
+                        <nav class="col-12 desktop-menu hidden-xxs hidden-xs hidden-sm" id="main-upper-nav">
                             {% partial 'navigation/main-upper-nav' %}
                         </nav>
                         <nav class="col-12 hidden-md hidden-lg hidden-xlg" id="hidden-menu-trigger">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
 
-                <nav class="col-12 hidden-xxs hidden-xs hidden-sm" id="main-lower-nav">
+                <nav class="col-12 desktop-menu hidden-xxs hidden-xs hidden-sm" id="main-lower-nav">
                     {% partial 'navigation/main-lower-nav' %}
                 </nav>
             </div>
