--- a/partials/layout/default/head.htm
+++ b/partials/layout/default/head.htm
@@ -1,4 +1,5 @@
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>{{ this.page.title }}</title>
 
 {# Load very common libraries from their CDN as quite likely cached #}
