--- a/layouts/2-col-left.htm
+++ b/layouts/2-col-left.htm
@@ -1,11 +1,11 @@
 description = "2 Column Right Sidebar"
 
 [cookieBanner]
-include_css = 1
-hard_reload = 1
+include_css = 0
+hard_reload = 0
+update_partial = "gdpr"
 update_selector = "#gdpr-reload"
 cookie_manager_page = "cookies"
-ignore_behaviour = "nothing"
 
 [staticMenu staticMenuMainNavUpper]
 code = "main-nav-upper"
