--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -2,7 +2,8 @@ description = "Single column layout"
 
 [cookieBanner]
 include_css = 0
-hard_reload = 1
+hard_reload = 0
+update_partial = "gdpr"
 update_selector = "#gdpr-reload"
 cookie_manager_page = "cookies"
 
@@ -70,13 +71,14 @@ formId = 1
     </div>
 </div>
 
-
 <script src="{{ 'assets/dist/js/manifest.js' | theme }}"></script>
 <script src="{{ 'assets/dist/js/vendor.js' | theme }}"></script>
 <script src="{{ 'assets/dist/js/app.js' | theme }}"></script>
 {% scripts %}
 
-
+<div id="gdpr-reload">
+    {% partial 'gdpr' %}
+</div>
 </body>
 
 </html>
