--- a/assets/src/sass/layout/_main.scss
+++ b/assets/src/sass/layout/_main.scss
@@ -29,6 +29,8 @@ a {
   @if($debug-containers == true) {
     border: 2px solid blue;
   }
+  padding-left: 0;
+  padding-right: 0;
   min-height: 80vh;
   background-color: $bg-main-container;
   main {
