fix image gallery responsivity

--- a/assets/src/sass/app.scss
+++ b/assets/src/sass/app.scss
@@ -4,6 +4,7 @@
 
 @import "typography";
 
+@import "layout/containers";
 @import "layout/header";
 @import "layout/underHeader";
 @import "layout/main";
