fix desktop menu logic. fix hamburger background'

--- a/assets/src/sass/component/_buttons.scss
+++ b/assets/src/sass/component/_buttons.scss
@@ -15,4 +15,7 @@ button {
     background-color: lighten($bg-brand-primary, 10%);
     cursor: pointer;
   }
+  &.hamburger {
+      background: transparent;
+  }
 }
