update package.json wih new dependencies

--- a/assets/src/sass/component/_buttons.scss
+++ b/assets/src/sass/component/_buttons.scss
@@ -17,5 +17,8 @@ button {
   }
   &.hamburger {
       background: transparent;
+    .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+      transition-duration: 0.5s;
+    }
   }
 }
