--- a/layouts/2-col-right.htm
+++ b/layouts/2-col-right.htm
@@ -16,6 +16,9 @@ code = "main-nav-lower"
 [staticMenu staticMenuMobileNav]
 code = "mobile-nav"
 
+[staticMenu staticMenuFooterLegal]
+code = "footer-legal"
+
 [ContactForm]
 formId = 1
 ==
@@ -40,17 +43,15 @@ formId = 1
 
 <div id="slideout-wrapper">
     <div class="container-full main-container">
-        <main class="container">
-            <div class="grid">
-                <div class="col-12 col-md-9">
-                    {% page %}
-                </div>
-
-                <div class="col-12 col-md-3">
-                    {% partial 'layout/2-column/sidebar' %}
-                </div>
+        <div class="grid">
+            <div class="col-12 col-md-9">
+                {% page %}
             </div>
-        </main>
+
+            <div class="col-12 col-md-3">
+                {% partial 'layout/2-column/sidebar' %}
+            </div>
+        </div>
     </div>
 
 </div>
@@ -61,7 +62,7 @@ formId = 1
 
 <nav class="grid" id="slideout-menu">
     <div class="col-12">
-        {% partial 'navigation/mobile-nav' %}
+        {% component 'staticMenuMobileNav' %}
     </div>
 </nav>
 
