--- a/partials/layout/2-column/sidebar.htm
+++ b/partials/layout/2-column/sidebar.htm
@@ -1,3 +1,9 @@
-<h2>A sidebar</h2>
+<div class="container">
+    <div class="grid">
+        <div class="col-12">
+            <h2>A sidebar</h2>
 
-<p>Some sidebar content</p>
+            <p>Some sidebar content</p>
+        </div>
+    </div>
+</div>
