--- a/partials/layout/default/header.htm
+++ b/partials/layout/default/header.htm
@@ -8,7 +8,7 @@
                 <div class="col-12">
                     <div class="grid">
                         <nav class="col-12 desktop-menu hidden-xxs hidden-xs hidden-sm" id="main-upper-nav">
-                            {% partial 'navigation/main-upper-nav' %}
+                            {% component 'staticMenuMainNavUpper' %}
                         </nav>
                         <nav class="col-12 hidden-md hidden-lg hidden-xlg" id="hidden-menu-trigger">
                             <button class="hamburger hamburger--slider" type="button"
@@ -22,7 +22,7 @@
                 </div>
 
                 <nav class="col-12 desktop-menu hidden-xxs hidden-xs hidden-sm" id="main-lower-nav">
-                    {% partial 'navigation/main-lower-nav' %}
+                    {% component 'staticMenuMainNavLower' %}
                 </nav>
             </div>
         </div>
