--- a/assets/src/sass/layout/_footer.scss
+++ b/assets/src/sass/layout/_footer.scss
@@ -13,7 +13,20 @@
     position: relative;
     background-color: $bg-footer;
     color: $color-over-brand;
-
+    a {
+      color:inherit;
+      text-decoration: none;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+    p {
+      &.owner-info {
+        text-align: center;
+        text-align-last: center;
+      }
+    }
     .by-line {
       margin: 10px;
       position: absolute;
